added add/remove user role feature

--- a/RealEstateAgency/Areas/Admin/Views/Admin/EditUser.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Admin/EditUser.cshtml
@@ -23,11 +23,6 @@
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserRole" class="control-label"></label>
-                <input asp-for="UserRole" class="form-control" />
-                <span asp-validation-for="UserRole" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
@@ -43,6 +38,15 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @for(int i = 0; i < Model.RoleViewModels.Count(); i++)
+                {
+                    <input type="hidden" asp-for="@Model.RoleViewModels[i].RoleId"/>
+                    <input type="hidden" asp-for="@Model.RoleViewModels[i].RoleName" />
+                    <input type="checkbox" asp-for="@Model.RoleViewModels[i].IsSet" />
+                    <label asp-for="@Model.RoleViewModels[i].IsSet">@Model.RoleViewModels[i].RoleName</label>
+                }
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -50,7 +54,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ManageUsers">Back to List</a>
 </div>
 
 @section Scripts {
