--- a/RealEstateAgency/Areas/Admin/Views/Admin/_AdminLayout.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Admin/_AdminLayout.cshtml
@@ -38,10 +38,9 @@
     <nav id="mySidenav" class="sidenav navbar-dark bg-dark">
         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         <br />
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="ManageUsers">Users</a>
+        <a href="#">Real estates</a>
+        <a href="#">Categories</a>
     </nav>
     <div id="main">
         <div class="container">
