--- a/RealEstateAgency/Areas/Admin/Views/Admin/_AdminLayout.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Admin/_AdminLayout.cshtml
@@ -39,6 +39,7 @@
         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         <br />
         <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="ManageUsers">Users</a>
+        <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="AddUser">Add user</a>
         <a href="#">Real estates</a>
         <a href="#">Categories</a>
     </nav>
