added add new role feature

--- a/RealEstateAgency/Areas/Admin/Views/Admin/_AdminLayout.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Admin/_AdminLayout.cshtml
@@ -40,6 +40,7 @@
         <br />
         <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="ManageUsers">Users</a>
         <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="AddUser">Add user</a>
+        <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="AddRole">Add role</a>
         <a href="#">Real estates</a>
         <a href="#">Categories</a>
     </nav>
