--- a/RealEstateAgency/Areas/Admin/Views/Admin/AddRole.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Admin/AddRole.cshtml
@@ -12,6 +12,11 @@
     <div class="col-md-4">
         <form method="post" asp-action="AddRole">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div hidden>
+                <label asp-for="RoleId" class="form-label"></label>
+                <input asp-for="RoleId" class="form-control" />
+                <span asp-validation-for="RoleId" class="text-danger"></span>
+            </div>
             <div class="d-block">
                 <label asp-for="RoleName" class="form-label"></label>
                 <input asp-for="RoleName" class="form-control" />
