--- a/RealEstateAgency/wwwroot/css/site.css
+++ b/RealEstateAgency/wwwroot/css/site.css
@@ -62,6 +62,7 @@ body {
 #main {
     transition: margin-left .5s;
     padding: 20px;
+    width: 100%;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
