--- a/RealEstateAgency/Areas/Admin/Views/Admin/_AdminLayout.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Admin/_AdminLayout.cshtml
@@ -1,94 +1,70 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject UserManager<IdentityUser> UserManager
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Admin Dashboard</title>
-        <link href="~/css/styles.css" rel="stylesheet" />
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-    </head>
-    <body class="sb-nav-fixed">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-            <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="index.html">PoetryLand - Admin</a>
-            <!-- Sidebar Toggle-->
-            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
-            <!-- Navbar Search-->
-            <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-                <div class="input-group">
-                    <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
-                    <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
-                </div>
-            </form>
-            <!-- Navbar-->
-            <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Settings</a></li>
-                        <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-                        <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" onclick="submit_form()" style="cursor: pointer">Logout</a></li>
-                        <form id="logout-form" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                        </form>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-        <div id="layoutSidenav">
-            <div id="layoutSidenav_nav">
-                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-                    <div class="sb-sidenav-menu">
-                        <div class="nav">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
-                                <div class="sb-nav-link-icon"><i class="fa fa-home"></i></div>
-                                Home
-                            </a>
-                            <br />
-                            <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="ManageUsers">
-                                <div class="sb-nav-link-icon"><i class="fa fa-user"></i></div>
-                                Users
-                            </a>
-                            <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="AddUser">
-                                <div class="sb-nav-link-icon"><i class="fa fa-home"></i></div>
-                                Add user
-                            </a>
-                            <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="AddRole">
-                                <div class="sb-nav-link-icon"><i class="fa-solid fa-hand"></i></div>
-                                Add role
-                            </a>
-                            @*<a href="#">Real estates</a>
-                            <a href="#">Categories</a>*@
-                        </div>
-                    </div>
-                    <div class="sb-sidenav-footer">
-                        <div class="small">Logged in as:</div>
-                        @UserManager.GetUserName(User)
-                    </div>
-                </nav>
-            </div>
-            <div id="layoutSidenav_content">
-                <main role="main" class="pb-3">
-                    @RenderBody()
-                </main>
-                <footer class="py-4 bg-light mt-auto">
-                    <div class="container-fluid px-4">
-                        <div class="d-flex align-items-center justify-content-center small">
-                            <div class="text-muted">Copyright &copy; RealEstate Agency @DateTime.Now.Year</div>
-                        </div>
-                    </div>
-                </footer>
-            </div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="~/js/scripts.js"></script>
-        @await RenderSectionAsync("Scripts", required: false)
-    </body>
-</html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - RealEstateAgency</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+</head>
 
+<body>
+    <header>
+        <nav id="navBar" class="admin-nav navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+            <div class="container-fluid">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RealEstateAgency</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link" id="sidebarToggle" href="#!" onclick="toggleNav()"><span class="navbar-toggler-icon"></span></a>
+                        </li>
+                        @*<li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>*@
+                    </ul>
+                    <partial name="_LoginPartial" />
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div id="mySidenav" class="sidenav navbar-dark bg-dark">
+        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+            <div class="sidenav-icon"><i class="fa fa-home"></i></div>
+            Home
+        </a>
+        <br />
+        <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="ManageUsers">
+            <div class="sidenav-icon"><i class="fa fa-user"></i></div>
+            Users
+        </a>
+        <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="ManageRoles">
+            <div class="sidenav-icon"><i class="fas fa-shield-alt"></i></div>
+            Roles
+        </a>
+        <a href="#">Real estates</a>
+        <a href="#">Categories</a>
+    </div>
+    <div id="main">
+        <div class="container">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
+
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2022 - RealEstateAgency - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>
+    </div>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
+</body>
+</html>
