--- a/RealEstateAgency/Areas/Admin/Views/Admin/AddRole.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Admin/AddRole.cshtml
@@ -33,7 +33,7 @@
             </div>
             <div class="d-block">
                 <input type="submit" value="Save" class="btn btn-primary" />
-                <a asp-action="ManageUsers" class="btn btn-primary">Back to List</a>
+                <a asp-action="ManageRoles" class="btn btn-primary">Back to List</a>
             </div>
         </form>
     </div>
