--- a/RealEstateAgency/wwwroot/css/site.css
+++ b/RealEstateAgency/wwwroot/css/site.css
@@ -19,12 +19,13 @@ body {
     margin-bottom: 60px;
 }
 
-.admin-nav {
-    width: 100%;
+.container {
+    padding-top: 60px;
 }
 
-.admin-nav a {
-    color: #818181;
+.navbar {
+    position: fixed;
+    width: 100%;
 }
 
 .sidenav {
@@ -32,40 +33,43 @@ body {
     width: 0;
     position: fixed;
     z-index: 1;
-    top: 0;
     left: 0;
+    background-color: #111;
     overflow-x: hidden;
-    padding-top: 60px;
     transition: 0.5s;
+    padding-top: 60px;
 }
 
-/* The navigation menu links */
+.sidenav-icon {
+    display: contents;
+}
+
 .sidenav a {
     padding: 6px 6px 6px 32px;
     text-decoration: none;
+    font-size: 18px;
     color: #818181;
     display: block;
     transition: 0.3s;
 }
 
-/* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
     color: #f1f1f1;
 }
 
-.sidenav .sidenav-footer {
-    padding: 0.75rem;
-    flex-shrink: 0;
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
 }
 
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
     transition: margin-left .5s;
-    padding: 20px;
-    width: 100%;
+    padding: 16px;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
     .sidenav {
         padding-top: 15px;
