replaced Id type for users and roles and added new entities

--- a/RealEstateAgency/Areas/Admin/Views/Admin/EditUser.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Admin/EditUser.cshtml
@@ -18,6 +18,16 @@
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="d-block">
+                <label asp-for="FirstName" class="form-label"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="d-block">
+                <label asp-for="LastName" class="form-label"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
+            <div class="d-block">
                 <label asp-for="UserName" class="form-label"></label>
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
