--- a/RealEstateAgency/Views/Shared/_Layout.cshtml
+++ b/RealEstateAgency/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject UserManager<IdentityUser> UserManager
+@using RealEstateAgency.Core.Entities
+@inject UserManager<AgentUser> UserManager
 
 <!DOCTYPE html>
 <html lang="en">
