--- a/RealEstateAgency/Views/Shared/_LoginPartial.cshtml
+++ b/RealEstateAgency/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using RealEstateAgency.Core.Entities
+@inject SignInManager<AgentUser> SignInManager
+@inject UserManager<AgentUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
