--- a/RealEstateAgency/Areas/Admin/Views/Admin/_AdminLayout.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Admin/_AdminLayout.cshtml
@@ -39,7 +39,7 @@
         </a>
         <br />
         <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="ManageUsers">
-            <div class="sidenav-icon"><i class="fa fa-user"></i></div>
+            <div class="sidenav-icon"><i class="fa fa-users"></i></div>
             Users
         </a>
         <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="ManageRoles">
