--- a/RealEstateAgency/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -38,11 +38,11 @@
             Home
         </a>
         <br />
-        <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="ManageUsers">
+        <a class="nav-link" asp-area="Admin" asp-controller="User" asp-action="ManageUsers">
             <div class="sidenav-icon"><i class="fa fa-users"></i></div>
             Users
         </a>
-        <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="ManageRoles">
+        <a class="nav-link" asp-area="Admin" asp-controller="Role" asp-action="ManageRoles">
             <div class="sidenav-icon"><i class="fas fa-shield-alt"></i></div>
             Roles
         </a>
