--- a/RealEstateAgency/Areas/Admin/Views/User/AddUser.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/User/AddUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model RealEstateAgencyMVC.Areas.Admin.Models.AddUserViewModel
+﻿@model RealEstateAgency.Core.Models.AddUserViewModel
 
 @{
     ViewData["Title"] = "AddUser";
