--- a/RealEstateAgency/Areas/Admin/Views/User/EditUser.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/User/EditUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model RealEstateAgencyMVC.Areas.Admin.Models.EditUserViewModel
+﻿@model RealEstateAgency.Core.Models.EditUserViewModel
 
 @{
     ViewData["Title"] = "EditUser";
