--- a/RealEstateAgency/Views/Shared/_Layout.cshtml
+++ b/RealEstateAgency/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         @if (User.IsInRole("admin"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Admin" asp-action="ManageUsers">Dashboard</a>
+                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="User" asp-action="ManageUsers">Dashboard</a>
                             </li>
                         }
                         @*<li class="nav-item">
