(database) updated id column for all tables

--- a/RealEstateAgency/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -48,8 +48,12 @@
             <div class="sidenav-icon"><i class="fas fa-shield-alt"></i></div>
             Roles
         </a>
-        <a class="nav-link" asp-area="Admin" asp-controller="Estate" asp-action="Details">
-            <div class="sidenav-icon"><i class="fas  fa-tools"></i></div>
+        <a class="nav-link" asp-area="Admin" asp-controller="Estates" asp-action="Index">
+            <div class="sidenav-icon"><i class="fa fa-building"></i></div>
+            Estates
+        </a>
+        <a class="nav-link" asp-area="Admin" asp-controller="EstateDetails" asp-action="Index">
+            <div class="sidenav-icon"><i class="fas fa-tools"></i></div>
             Estate details
         </a>
     </div>
